fix scrolling when glyph is selected on mobile

--- a/public/output.css
+++ b/public/output.css
@@ -562,6 +562,10 @@ video {
   z-index: 50;
 }
 
+.mt-16 {
+  margin-top: 4rem;
+}
+
 .ml-24 {
   margin-left: 6rem;
 }
@@ -749,6 +753,10 @@ video {
   align-self: center;
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
 .overflow-x-hidden {
   overflow-x: hidden;
 }
@@ -797,8 +805,8 @@ video {
   background-color: rgba(84, 12, 7, 0.5);
 }
 
-.bg-opacity-70 {
-  --tw-bg-opacity: 0.7;
+.bg-opacity-80 {
+  --tw-bg-opacity: 0.8;
 }
 
 .object-scale-down {
